// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tile /> create tile component 1`] = `
<div
  className="fd-tile blue"
>
  <div
    className="fd-tile__content red"
  >
    <h3
      className="fd-tile__title red"
    >
      Tile Title
    </h3>
    <p>
      Tile Description
    </p>
  </div>
</div>
`;

exports[`<Tile /> create tile component 2`] = `
<div
  backgroundColor={8}
  className="fd-tile is-disabled"
  columnSpan={3}
>
  <div
    className="fd-tile__content"
  >
    <h3
      className="fd-tile__title"
    >
      Tile Title
    </h3>
    <p>
      Tile Description
    </p>
  </div>
</div>
`;

exports[`<Tile /> create tile component 3`] = `
<div
  className="fd-tile"
>
  <div
    className="fd-tile__media green"
  >
    <span
      className="fd-identifier fd-identifier--m sap-icon--home fd-has-background-color-accent-3"
      role="presentation"
    />
  </div>
  <div
    className="fd-tile__content"
  >
    <h3
      className="fd-tile__title"
    >
      Tile Title
    </h3>
    <p>
      Tile Description
    </p>
  </div>
</div>
`;

exports[`<Tile /> create tile component 4`] = `
<div
  className="fd-tile"
>
  <div
    className="fd-tile__content"
  >
    <h3
      className="fd-tile__title"
    >
      Tile Title
    </h3>
  </div>
  <div
    className="fd-tile__actions yellow"
  >
    <div
      className="fd-popover"
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <button
            className="fd-button fd-button--standard sap-icon--vertical-grip"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tile /> create tile component 5`] = `
<div
  className="fd-tile"
>
  <div
    className="fd-tile__media"
  >
    <span
      className="fd-identifier fd-identifier--m sap-icon--home fd-has-background-color-accent-3"
      role="presentation"
    />
  </div>
  <div
    className="fd-tile__content"
  >
    <h3
      className="fd-tile__title"
    >
      Tile Title
    </h3>
    <p>
      Tile Description
    </p>
  </div>
</div>
`;

exports[`<Tile /> create tile component 6`] = `
<div
  className="fd-tile"
>
  <div
    className="fd-tile__content"
  >
    <h3
      className="fd-tile__title"
    >
      Tile Title
    </h3>
  </div>
  <div
    className="fd-tile__actions"
  >
    <div
      className="fd-popover"
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <button
            className="fd-button fd-button--standard sap-icon--vertical-grip"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tile /> create tile component 7`] = `
<div
  className="fd-product-tile pink"
>
  <div
    className="fd-product-tile__media"
    style={
      Object {
        "backgroundImage": "url(www.image.com)",
      }
    }
  />
  <div
    className="fd-tile__media"
  />
  <div
    className="fd-product-tile__content"
  >
    <h3
      className="fd-product-tile__title"
    >
      Tile Title
    </h3>
    <p>
      Tile Description
    </p>
  </div>
</div>
`;

exports[`<Tile /> create tile component 8`] = `
<div
  className="fd-product-tile is-disabled"
>
  <div
    className="fd-product-tile__media"
    style={
      Object {
        "backgroundImage": "url(www.image.com)",
      }
    }
  />
  <div
    className="fd-tile__media blue"
  />
  <div
    className="fd-product-tile__content blue"
  >
    <h3
      className="fd-product-tile__title blue"
    >
      Tile Title
    </h3>
    <p>
      Tile Description
    </p>
  </div>
</div>
`;
